src/objects/agf__ADM_Work_Cache__c.object
<CustomObject>
    <fields>
        <fullName>agf__Change_List_Description__c</fullName>
        <label>Change List Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Changes__c</fullName>
        <description>Stores a JSON formatted array of changes.</description>
        <label>Changes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Field_Names_With_Changes__c</fullName>
        <label>Field Names With Changes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Has_Been_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Been Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Has_Been_Opened__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Been Opened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Cache</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Work__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>Work Cache</relationshipLabel>
        <relationshipName>Work_Cache</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Work Cache</label>
    <nameField>
        <label>Work Cache Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Cache</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>